        original-case APT option instead of normalised-case APT option.
      - 'setScalar': accept any option from 'dpkg' family without filtering.
    - system/state:
      - [API break] 'getInstalledInfo': returns raw pointer.
      - [ABI break] Removed handling of longly obsolete Status fields. Patch by
        Guillem Jover. (Closes: #764468)
    - system/worker:
      - [API break] 'setAutomaticallyInstalledFlag': removed as obsolete.
      - Debdelta helper: use debdelta sources file path as relative to 'dir'
        option, not as absolute path.
    - system/resolvers/native:
      - Removed the version normalized score calculation skew.
        (Closes: #754480, #622939)
      - Implemented automatic quality adjustment.
      - Fixed not applying downgrade score for reinstalls. This regression
        was introduced in 2.6.0.
      - Significantly reduced not-user score part of upgrades.
    - versionstring:
      - [API break] 'getOriginal': return StringRange.
  * doc:
    - cmakelists:
      - Added rules building man pages from PODs.

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Sun, 11 May 2014 21:26:32 +0300

cupt (2.8.4) unstable; urgency=medium

  * lib:
    - system/worker:
      - 'changeSystem': preinstall hooks: pass original version strings of
        installed versions, not id-suffixed ones. (Closes: #764754)
    - cache:
      - Version pinning: fixed matching version strings of installed versions.
        (Closes: #764238)
    - system/resolvers/native:
      - Reverted 'fixed failing to satisfy 'remove x --no-remove'-kinds of
        requests', so 'no-remove' option works again for any kind of user
        requests. This now includes explicit ones as well, so
        'remove x --no-remove' are now expected to fail if 'x' is manually
        installed package. The regression was introduced in 2.7.3.
  * cmakelists:
    - Added '-pthread' to compiling and linking flags. (Closes: #760489)
